--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/swiper": "^6.0.0",
+    "overlayscrollbars": "^2.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "simple-scrollbar": "^0.4.0",
     "swiper": "^11.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
