--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/swiper": "^6.0.0",
+    "axios": "^1.7.2",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "overlayscrollbars": "^2.8.3",
